E2J/part4/t44.output
running e2j
compiling the Java generated code
My_e2j.java:3: error: illegal start of expression
=
^
My_e2j.java:4: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:6: error: unclosed string literal
"
^
My_e2j.java:7: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:7: error: not a statement
System.out.println"
          ^
My_e2j.java:8: error: unclosed string literal
"
^
My_e2j.java:10: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:10: error: not a statement
System.out.println"
          ^
My_e2j.java:11: error: unclosed string literal
"
^
My_e2j.java:17: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:17: error: not a statement
System.out.println"
          ^
My_e2j.java:18: error: unclosed string literal
"
^
My_e2j.java:19: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:19: error: not a statement
System.out.println"
          ^
My_e2j.java:20: error: unclosed string literal
"
^
My_e2j.java:21: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:21: error: not a statement
System.out.println"
          ^
My_e2j.java:22: error: unclosed string literal
"
^
My_e2j.java:23: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:23: error: not a statement
System.out.println"
          ^
My_e2j.java:24: error: unclosed string literal
"
^
My_e2j.java:25: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:25: error: not a statement
System.out.println"
          ^
My_e2j.java:26: error: unclosed string literal
"
^
My_e2j.java:27: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:27: error: not a statement
System.out.println"
          ^
My_e2j.java:28: error: unclosed string literal
"
^
My_e2j.java:29: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:29: error: not a statement
System.out.println"
          ^
My_e2j.java:30: error: unclosed string literal
"
^
30 errors
